<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PreviewFilmsActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            <LinearLayout
                style="@style/PreviewFilm"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/spiderman">
                </ImageView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/spider_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spider_man_title"
                        android:layout_marginBottom="10dp"
                        android:tag="film_title"
                        style="@style/PreviewFilmTitle">
                    </TextView>
                    <Button
                        android:id="@+id/show_more1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_button_title"
                        android:padding="3dp"
                        android:minHeight="30dp"
                        android:minWidth="30dp"
                        android:drawablePadding="3dp"
                        android:background="@drawable/more"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/PreviewFilm"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hulk">
                </ImageView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/hulk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hulk_title"
                        android:layout_marginBottom="10dp"
                        android:tag="film_title"
                        style="@style/PreviewFilmTitle">
                    </TextView>
                    <Button
                        android:id="@+id/show_more2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_button_title"
                        android:padding="3dp"
                        android:minHeight="30dp"
                        android:minWidth="30dp"
                        android:drawablePadding="3dp"
                        android:background="@drawable/more"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/PreviewFilm"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/batman">
                </ImageView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/batman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/batman_title"
                        android:layout_marginBottom="10dp"
                        android:tag="film_title"
                        style="@style/PreviewFilmTitle">
                    </TextView>
                    <Button
                        android:id="@+id/show_more3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_button_title"
                        android:padding="3dp"
                        android:minHeight="30dp"
                        android:minWidth="30dp"
                        android:drawablePadding="3dp"
                        android:background="@drawable/more"
                        />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:drawableStart="@drawable/share">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>